--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.3",
     "@commitlint/config-conventional": "^17.6.3",
+    "@rocketseat/eslint-config": "^1.2.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
-    "husky": "^8.0.3"
+    "husky": "^8.0.3",
+    "prettier-plugin-tailwindcss": "^0.3.0"
   },
   "config": {
     "commitizen": {
